# haproxy-template-ingress-controller

./: .codecov.yml  .coveragerc  .dockerignore  .gitignore  .golangci.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LINTING_SUMMARY.md  Makefile  NOTICE  README.md  STYLEGUIDE.md  arch-go.yml  coverage_wrapper.py  example-configmap.yaml  go.mod  go.sum  kind-config-test.yaml  kind-config.yaml  pyproject.toml  test.txt
codegen/haproxy_dataplane_v3/: .gitignore  README.md  haproxy_dataplane_v3_README.md  pyproject.toml
codegen/haproxy_dataplane_v3/.openapi-generator/: FILES
codegen/haproxy_dataplane_v3/haproxy_dataplane_v3/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
codegen/haproxy_dataplane_v3/haproxy_dataplane_v3/api/: __init__.py  acl_api.py  acl_runtime_api.py  acme_api.py  backend_api.py  backend_switching_rule_api.py  bind_api.py  cache_api.py  cluster_api.py  configuration_api.py  crt_load_api.py  crt_store_api.py  declare_capture_api.py  defaults_api.py  dgram_bind_api.py  discovery_api.py  fcgi_app_api.py  filter_api.py  frontend_api.py  global_api.py  group_api.py  health_api.py  http_after_response_rule_api.py  http_check_api.py  http_error_rule_api.py  http_errors_api.py  http_request_rule_api.py  http_response_rule_api.py  information_api.py  log_forward_api.py  log_profile_api.py  log_target_api.py  mailer_entry_api.py  mailers_api.py  maps_api.py  nameserver_api.py  peer_api.py  peer_entry_api.py  process_manager_api.py  quic_initial_rule_api.py  (+26 more)
codegen/haproxy_dataplane_v3/haproxy_dataplane_v3/api/acl/: create_acl_backend.py  create_acl_defaults.py  create_acl_fcgi_app.py  create_acl_frontend.py  delete_acl_backend.py  delete_acl_defaults.py  delete_acl_fcgi_app.py  delete_acl_frontend.py  get_acl_backend.py  get_acl_defaults.py  get_acl_fcgi_app.py  get_acl_frontend.py  get_all_acl_backend.py  get_all_acl_defaults.py  get_all_acl_fcgi_app.py  get_all_acl_frontend.py  replace_acl_backend.py  replace_acl_defaults.py  replace_acl_fcgi_app.py  replace_acl_frontend.py  replace_all_acl_backend.py  replace_all_acl_defaults.py  replace_all_acl_fcgi_app.py  replace_all_acl_frontend.py
codegen/haproxy_dataplane_v3/haproxy_dataplane_v3/api/acl_runtime/: add_payload_runtime_acl.py  delete_services_haproxy_runtime_acls_parent_name_entries_id.py  get_services_haproxy_runtime_acls.py  get_services_haproxy_runtime_acls_id.py  get_services_haproxy_runtime_acls_parent_name_entries.py  get_services_haproxy_runtime_acls_parent_name_entries_id.py  post_services_haproxy_runtime_acls_parent_name_entries.py
codegen/haproxy_dataplane_v3/haproxy_dataplane_v3/api/acme/: create_acme_provider.py  delete_acme_provider.py  edit_acme_provider.py  get_acme_provider.py  get_acme_providers.py
codegen/haproxy_dataplane_v3/haproxy_dataplane_v3/api/backend/: create_backend.py  delete_backend.py  get_backend.py  get_backends.py  replace_backend.py
codegen/haproxy_dataplane_v3/haproxy_dataplane_v3/docs/: ACLApi.md  ACLRuntimeApi.md  Acl.md  AclFile.md  AclFileEntry.md  AcmeApi.md  AcmeCertificateStatus.md  AcmeProvider.md  AwsFilters.md  AwsRegion.md  Backend.md  BackendApi.md  BackendBase.md  BackendBaseForcePersist.md  BackendBaseForcePersistListInner.md  BackendBaseIgnorePersist.md  BackendBaseIgnorePersistListInner.md  BackendSwitchingRule.md  BackendSwitchingRuleApi.md  Balance.md  Bind.md  BindApi.md  BindParams.md  Cache.md  CacheApi.md  Capture.md  ClusterApi.md  ClusterControllerInformation.md  ClusterControllerInformationLogTargetsInner.md  ClusterSettings.md  Compression.md  ConfigStickTable.md  ConfigurationApi.md  Consul.md  Cookie.md  CookieAttrInner.md  CookieDomainInner.md  CrtLoad.md  CrtLoadApi.md  CrtStore.md  (+215 more)
codegen/haproxy_dataplane_v3/haproxy_dataplane_v3/models/: __init__.py  acl.py  acl_file.py  acl_file_entry.py  acl_lines.py  acme_certificate_status.py  acme_provider.py  acme_provider_challenge.py  acme_provider_keytype.py  add_ca_entry_body.py  aws_filters.py  aws_region.py  aws_region_ipv_4_address.py  aws_region_server_slots_growth_type.py  backend.py  backend_base.py  backend_base_abortonclose.py  backend_base_accept_invalid_http_response.py  backend_base_accept_unsafe_violations_in_http_response.py  backend_base_adv_check.py  backend_base_allbackups.py  backend_base_checkcache.py  backend_base_external_check.py  backend_base_force_persist.py  backend_base_force_persist_cond.py  backend_base_force_persist_list_inner.py  backend_base_force_persist_list_item.py  backend_base_force_persist_list_item_cond.py  backend_base_h1_case_adjust_bogus_server.py  backend_base_hash_preserve_affinity.py  backend_base_http_buffer_request.py  backend_base_http_connection_mode.py  backend_base_http_drop_request_trailers.py  backend_base_http_no_delay.py  backend_base_http_pretend_keepalive.py  backend_base_http_proxy.py  backend_base_http_restrict_req_hdr_names.py  backend_base_http_reuse.py  backend_base_http_use_htx.py  backend_base_ignore_persist.py  (+611 more)
codegen/haproxy_dataplane_v3/haproxy_dataplane_v3/test/: test_acl.py  test_acl_api.py  test_acl_file.py  test_acl_file_entry.py  test_acl_runtime_api.py  test_acme_api.py  test_acme_certificate_status.py  test_acme_provider.py  test_aws_filters.py  test_aws_region.py  test_backend.py  test_backend_api.py  test_backend_base.py  test_backend_base_force_persist.py  test_backend_base_force_persist_list_inner.py  test_backend_base_ignore_persist.py  test_backend_base_ignore_persist_list_inner.py  test_backend_switching_rule.py  test_backend_switching_rule_api.py  test_balance.py  test_bind.py  test_bind_api.py  test_bind_params.py  test_cache.py  test_cache_api.py  test_capture.py  test_cluster_api.py  test_cluster_controller_information.py  test_cluster_controller_information_log_targets_inner.py  test_cluster_settings.py  test_compression.py  test_config_stick_table.py  test_configuration_api.py  test_consul.py  test_cookie.py  test_cookie_attr_inner.py  test_cookie_domain_inner.py  test_crt_load.py  test_crt_load_api.py  test_crt_store.py  (+215 more)
(+1558 files in other folders)
