[project]
name = "haproxy-template-ic"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "dacite>=1.9.2",
    "deepdiff>=8.6.0",
    "jinja2>=3.1.0",
    "kopf>=1.38.0",
    "kr8s>=0.20.9",
    "kubernetes>=33.1.0",
    "pyyaml>=6.0.2",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "docker>=7.1.0",
    "lint>=1.2.1",
    "mypy>=1.8.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-kind>=22.11.1",
    "pytest-xdist>=3.8.0",
    "python-on-whales>=0.78.0",
    "ruff>=0.12.7",
    "types-click>=7.1.8",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.32.4.20250809",
]

[project.scripts]
haproxy-template-ic = "haproxy_template_ic.__main__:main"

[tool.uv]
package = true

[tool.uv.workspace]
members = [
    "haproxy-template-ic",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
testpaths = ["haproxy_template_ic/test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cluster-name=haproxy-template-ic-test",
    "--kubeconfig=.pytest-kind/haproxy-template-ic-test/kubeconfig",
    "-m",
    "not slow",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
]

[tool.coverage.run]
source = ["haproxy_template_ic"]
omit = [
    "*/test/*",
    "*/tests/*",
    "haproxy_template_ic/test/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.paths]
source = [
    "haproxy_template_ic",
    "/app/lib/python*/site-packages/haproxy_template_ic",
]

[tool.coverage.report]
omit = [
    "*/test/*",
    "*/tests/*",
    "haproxy_template_ic/test/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.13"
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = true

# Exclude test files for now to focus on production code
exclude = [
    "haproxy_template_ic/test/.*",
]

# For third-party libraries without type stubs or py.typed markers
# We only ignore imports for libraries that genuinely lack typing support
[[tool.mypy.overrides]]
module = [
    "kopf.*",        # Kubernetes operator framework - no official type stubs
    "kr8s.*",        # Kubernetes library - no official type stubs  
    "kubernetes.*",  # Official Kubernetes client - no official type stubs
    "dacite.*",      # Dataclass utilities - no official type stubs
    "deepdiff.*",    # Deep difference library - no official type stubs
    "docker.*",      # Docker library - no official type stubs
    "python_on_whales.*",  # Docker wrapper - no official type stubs
]
ignore_missing_imports = true

# Be more lenient with kopf-related issues
[[tool.mypy.overrides]]
module = "haproxy_template_ic.operator"
warn_return_any = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
